--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,17 @@
 name: bg_searchable_dropdown
-description: "This package gives customized options in searchable dropdown."
-version: 0.0.2
+description:
+ "More Descriptive: 
+ Instead of just saying it provides customized options,
+ the description now mentions specific features like search functionality, 
+ clear option, and flexible styling.  This gives potential users a better idea of what 
+ the package offers.
+ 
+Concise and Clear:  
+It's still relatively short and to the point, but it provides more useful information.
+
+Action-Oriented: 
+The use of offering features like... is a bit more active and engaging."
+version: 0.0.3
 homepage: https://github.com/AbilashBG/bg_searchable_dropdown.git
 
 environment:
@@ -10,46 +21,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-bg_searchable_dropdown: ^0.0.2
+bg_searchable_dropdown: ^0.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
 
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/to/asset-from-package
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # To add custom fonts to your package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/to/font-from-package
